src/re2c-scanner-m.cc
/* Generated by re2c 1.1.1 on Fri Nov 16 20:21:48 2018 */
#line 1 "re2c-scanner-m.re"
/*
This file is part of P2X.
Copyright © 2018 Johannes Willkomm
See the file p2x.cc for copying conditions.
*/

#include "token.ncd.enum.hh"

#define YYMAXFILL 4


#line 15 "re2c-scanner-m.cc"
enum YYCONDTYPE {
	yycINITIAL,
	yycSTARTEXP,
};
#line 11 "re2c-scanner-m.re"


typedef unsigned char uint8_t;

static int re2c_scanner_m_c = yycINITIAL;

int re2c_scanner_m_lex(const uint8_t *&s, const uint8_t *&m, uint8_t const * lim)
{

  

    lim += YYMAXFILL;

    
#line 35 "re2c-scanner-m.cc"
{
	uint8_t yych;
	unsigned int yyaccept = 0;
	switch (re2c_scanner_m_c) {
	case yycINITIAL: goto yyc_INITIAL;
	case yycSTARTEXP: goto yyc_STARTEXP;
	}
/* *********************************** */
yyc_INITIAL:
	if ((lim - s) < 4) return false;
	yych = *s;
	switch (yych) {
	case 0x00:	goto yy3;
	case '\t':	goto yy7;
	case '\n':	goto yy9;
	case '\r':	goto yy11;
	case ' ':	goto yy13;
	case '!':	goto yy16;
	case '"':	goto yy18;
	case '#':	goto yy19;
	case '%':	goto yy21;
	case '&':	goto yy23;
	case '\'':	goto yy25;
	case '(':	goto yy27;
	case ')':	goto yy29;
	case '*':	goto yy31;
	case '+':	goto yy33;
	case ',':	goto yy35;
	case '-':	goto yy37;
	case '.':	goto yy39;
	case '/':	goto yy41;
	case '0':	goto yy43;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy45;
	case ':':	goto yy47;
	case ';':	goto yy49;
	case '<':	goto yy51;
	case '=':	goto yy53;
	case '>':	goto yy55;
	case '?':	goto yy57;
	case '@':	goto yy59;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy61;
	case '[':	goto yy64;
	case '\\':	goto yy66;
	case ']':	goto yy68;
	case '^':	goto yy70;
	case '{':	goto yy72;
	case '|':	goto yy74;
	case '}':	goto yy76;
	case '~':	goto yy78;
	case 0xC0:
	case 0xC1:
	case 0xC2:
	case 0xC3:
	case 0xC4:
	case 0xC5:
	case 0xC6:
	case 0xC7:
	case 0xC8:
	case 0xC9:
	case 0xCA:
	case 0xCB:
	case 0xCC:
	case 0xCD:
	case 0xCE:
	case 0xCF:
	case 0xD0:
	case 0xD1:
	case 0xD2:
	case 0xD3:
	case 0xD4:
	case 0xD5:
	case 0xD6:
	case 0xD7:
	case 0xD8:
	case 0xD9:
	case 0xDA:
	case 0xDB:
	case 0xDC:
	case 0xDD:
	case 0xDE:
	case 0xDF:	goto yy80;
	case 0xE0:
	case 0xE1:
	case 0xE2:
	case 0xE3:
	case 0xE4:
	case 0xE5:
	case 0xE6:
	case 0xE7:
	case 0xE8:
	case 0xE9:
	case 0xEA:
	case 0xEB:
	case 0xEC:
	case 0xED:
	case 0xEE:
	case 0xEF:	goto yy81;
	case 0xF0:
	case 0xF1:
	case 0xF2:
	case 0xF3:
	case 0xF4:
	case 0xF5:
	case 0xF6:
	case 0xF7:	goto yy82;
	default:	goto yy5;
	}
yy3:
	++s;
#line 143 "re2c-scanner-m.re"
	{ return TOKEN_EOF; }
#line 207 "re2c-scanner-m.cc"
yy5:
	++s;
yy6:
#line 145 "re2c-scanner-m.re"
	{ return TOKEN_ILLEGAL_CHAR; }
#line 213 "re2c-scanner-m.cc"
yy7:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 137 "re2c-scanner-m.re"
	{ return TOKEN_TAB; }
#line 219 "re2c-scanner-m.cc"
yy9:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 136 "re2c-scanner-m.re"
	{ return TOKEN_NEWLINE; }
#line 225 "re2c-scanner-m.cc"
yy11:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 135 "re2c-scanner-m.re"
	{ return TOKEN_CRETURN; }
#line 231 "re2c-scanner-m.cc"
yy13:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case ' ':	goto yy13;
	default:	goto yy15;
	}
yy15:
	re2c_scanner_m_c = yycSTARTEXP;
#line 138 "re2c-scanner-m.re"
	{ return TOKEN_SPACE; }
#line 244 "re2c-scanner-m.cc"
yy16:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy83;
	default:	goto yy17;
	}
yy17:
	re2c_scanner_m_c = yycSTARTEXP;
#line 92 "re2c-scanner-m.re"
	{ return TOKEN_EXCLAM; }
#line 255 "re2c-scanner-m.cc"
yy18:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
	case 0x00:
	case '\n':	goto yy6;
	default:	goto yy86;
	}
yy19:
	++s;
#line 133 "re2c-scanner-m.re"
	{ return TOKEN_HASH; }
#line 268 "re2c-scanner-m.cc"
yy21:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 108 "re2c-scanner-m.re"
	{ return TOKEN_MOD; }
#line 274 "re2c-scanner-m.cc"
yy23:
	yych = *++s;
	switch (yych) {
	case '&':	goto yy92;
	default:	goto yy24;
	}
yy24:
	re2c_scanner_m_c = yycSTARTEXP;
#line 99 "re2c-scanner-m.re"
	{ return TOKEN_AND; }
#line 285 "re2c-scanner-m.cc"
yy25:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 111 "re2c-scanner-m.re"
	{ return TOKEN_APOS; }
#line 291 "re2c-scanner-m.cc"
yy27:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 70 "re2c-scanner-m.re"
	{ return TOKEN_L_PAREN; }
#line 297 "re2c-scanner-m.cc"
yy29:
	++s;
#line 71 "re2c-scanner-m.re"
	{ return TOKEN_R_PAREN; }
#line 302 "re2c-scanner-m.cc"
yy31:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy94;
	default:	goto yy32;
	}
yy32:
	re2c_scanner_m_c = yycSTARTEXP;
#line 107 "re2c-scanner-m.re"
	{ return TOKEN_MULT; }
#line 313 "re2c-scanner-m.cc"
yy33:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy96;
	default:	goto yy34;
	}
yy34:
	re2c_scanner_m_c = yycSTARTEXP;
#line 104 "re2c-scanner-m.re"
	{ return TOKEN_PLUS; }
#line 324 "re2c-scanner-m.cc"
yy35:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 95 "re2c-scanner-m.re"
	{ return TOKEN_COMMA; }
#line 330 "re2c-scanner-m.cc"
yy37:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy98;
	default:	goto yy38;
	}
yy38:
	re2c_scanner_m_c = yycSTARTEXP;
#line 105 "re2c-scanner-m.re"
	{ return TOKEN_MINUS; }
#line 341 "re2c-scanner-m.cc"
yy39:
	yyaccept = 1;
	yych = *(m = ++s);
	switch (yych) {
	case '\'':	goto yy100;
	case '*':	goto yy102;
	case '.':	goto yy104;
	case '/':	goto yy105;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy107;
	case '\\':	goto yy110;
	case '^':	goto yy112;
	default:	goto yy40;
	}
yy40:
	re2c_scanner_m_c = yycSTARTEXP;
#line 97 "re2c-scanner-m.re"
	{ return TOKEN_FULL_STOP; }
#line 368 "re2c-scanner-m.cc"
yy41:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy114;
	default:	goto yy42;
	}
yy42:
	re2c_scanner_m_c = yycSTARTEXP;
#line 106 "re2c-scanner-m.re"
	{ return TOKEN_DIV; }
#line 379 "re2c-scanner-m.cc"
yy43:
	yyaccept = 2;
	yych = *(m = ++s);
	switch (yych) {
	case 'x':	goto yy121;
	default:	goto yy46;
	}
yy44:
#line 64 "re2c-scanner-m.re"
	{ return TOKEN_INTEGER; }
#line 390 "re2c-scanner-m.cc"
yy45:
	yyaccept = 2;
	m = ++s;
	if ((lim - s) < 3) return false;
	yych = *s;
yy46:
	switch (yych) {
	case '.':	goto yy116;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy45;
	case 'D':
	case 'E':
	case 'd':
	case 'e':	goto yy117;
	case 'F':
	case 'I':
	case 'f':
	case 'i':	goto yy118;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy119;
	default:	goto yy44;
	}
yy47:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 94 "re2c-scanner-m.re"
	{ return TOKEN_COLON; }
#line 428 "re2c-scanner-m.cc"
yy49:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 96 "re2c-scanner-m.re"
	{ return TOKEN_SEMICOLON; }
#line 434 "re2c-scanner-m.cc"
yy51:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy122;
	default:	goto yy52;
	}
yy52:
	re2c_scanner_m_c = yycSTARTEXP;
#line 81 "re2c-scanner-m.re"
	{ return TOKEN_LESS; }
#line 445 "re2c-scanner-m.cc"
yy53:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy124;
	default:	goto yy54;
	}
yy54:
	re2c_scanner_m_c = yycSTARTEXP;
#line 79 "re2c-scanner-m.re"
	{ return TOKEN_EQUAL; }
#line 456 "re2c-scanner-m.cc"
yy55:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy126;
	default:	goto yy56;
	}
yy56:
	re2c_scanner_m_c = yycSTARTEXP;
#line 82 "re2c-scanner-m.re"
	{ return TOKEN_GREATER; }
#line 467 "re2c-scanner-m.cc"
yy57:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 93 "re2c-scanner-m.re"
	{ return TOKEN_QUESTION; }
#line 473 "re2c-scanner-m.cc"
yy59:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 131 "re2c-scanner-m.re"
	{ return TOKEN_AT; }
#line 479 "re2c-scanner-m.cc"
yy61:
	yyaccept = 3;
	m = ++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy61;
	case 0xC0:
	case 0xC1:
	case 0xC2:
	case 0xC3:
	case 0xC4:
	case 0xC5:
	case 0xC6:
	case 0xC7:
	case 0xC8:
	case 0xC9:
	case 0xCA:
	case 0xCB:
	case 0xCC:
	case 0xCD:
	case 0xCE:
	case 0xCF:
	case 0xD0:
	case 0xD1:
	case 0xD2:
	case 0xD3:
	case 0xD4:
	case 0xD5:
	case 0xD6:
	case 0xD7:
	case 0xD8:
	case 0xD9:
	case 0xDA:
	case 0xDB:
	case 0xDC:
	case 0xDD:
	case 0xDE:
	case 0xDF:	goto yy128;
	case 0xE0:
	case 0xE1:
	case 0xE2:
	case 0xE3:
	case 0xE4:
	case 0xE5:
	case 0xE6:
	case 0xE7:
	case 0xE8:
	case 0xE9:
	case 0xEA:
	case 0xEB:
	case 0xEC:
	case 0xED:
	case 0xEE:
	case 0xEF:	goto yy129;
	case 0xF0:
	case 0xF1:
	case 0xF2:
	case 0xF3:
	case 0xF4:
	case 0xF5:
	case 0xF6:
	case 0xF7:	goto yy130;
	default:	goto yy63;
	}
yy63:
#line 139 "re2c-scanner-m.re"
	{ return TOKEN_IDENTIFIER; }
#line 610 "re2c-scanner-m.cc"
yy64:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 76 "re2c-scanner-m.re"
	{ return TOKEN_L_BRACKET; }
#line 616 "re2c-scanner-m.cc"
yy66:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy131;
	default:	goto yy67;
	}
yy67:
	re2c_scanner_m_c = yycSTARTEXP;
#line 109 "re2c-scanner-m.re"
	{ return TOKEN_BACKSLASH; }
#line 627 "re2c-scanner-m.cc"
yy68:
	++s;
#line 77 "re2c-scanner-m.re"
	{ return TOKEN_R_BRACKET; }
#line 632 "re2c-scanner-m.cc"
yy70:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy133;
	default:	goto yy71;
	}
yy71:
	re2c_scanner_m_c = yycSTARTEXP;
#line 110 "re2c-scanner-m.re"
	{ return TOKEN_POW; }
#line 643 "re2c-scanner-m.cc"
yy72:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 73 "re2c-scanner-m.re"
	{ return TOKEN_L_BRACE; }
#line 649 "re2c-scanner-m.cc"
yy74:
	yych = *++s;
	switch (yych) {
	case '|':	goto yy135;
	default:	goto yy75;
	}
yy75:
	re2c_scanner_m_c = yycSTARTEXP;
#line 101 "re2c-scanner-m.re"
	{ return TOKEN_OR; }
#line 660 "re2c-scanner-m.cc"
yy76:
	++s;
#line 74 "re2c-scanner-m.re"
	{ return TOKEN_R_BRACE; }
#line 665 "re2c-scanner-m.cc"
yy78:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy137;
	default:	goto yy79;
	}
yy79:
	re2c_scanner_m_c = yycSTARTEXP;
#line 91 "re2c-scanner-m.re"
	{ return TOKEN_TILDE; }
#line 676 "re2c-scanner-m.cc"
yy80:
	yych = *++s;
	switch (yych) {
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x85:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8A:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x91:
	case 0x92:
	case 0x93:
	case 0x94:
	case 0x95:
	case 0x96:
	case 0x97:
	case 0x98:
	case 0x99:
	case 0x9A:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9E:
	case 0x9F:
	case 0xA0:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:	goto yy61;
	default:	goto yy6;
	}
yy81:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x85:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8A:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x91:
	case 0x92:
	case 0x93:
	case 0x94:
	case 0x95:
	case 0x96:
	case 0x97:
	case 0x98:
	case 0x99:
	case 0x9A:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9E:
	case 0x9F:
	case 0xA0:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:	goto yy128;
	default:	goto yy6;
	}
yy82:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
	case 0x80:
	case 0x81:
	case 0x82:
	case 0x83:
	case 0x84:
	case 0x85:
	case 0x86:
	case 0x87:
	case 0x88:
	case 0x89:
	case 0x8A:
	case 0x8B:
	case 0x8C:
	case 0x8D:
	case 0x8E:
	case 0x8F:
	case 0x90:
	case 0x91:
	case 0x92:
	case 0x93:
	case 0x94:
	case 0x95:
	case 0x96:
	case 0x97:
	case 0x98:
	case 0x99:
	case 0x9A:
	case 0x9B:
	case 0x9C:
	case 0x9D:
	case 0x9E:
	case 0x9F:
	case 0xA0:
	case 0xA1:
	case 0xA2:
	case 0xA3:
	case 0xA4:
	case 0xA5:
	case 0xA6:
	case 0xA7:
	case 0xA8:
	case 0xA9:
	case 0xAA:
	case 0xAB:
	case 0xAC:
	case 0xAD:
	case 0xAE:
	case 0xAF:
	case 0xB0:
	case 0xB1:
	case 0xB2:
	case 0xB3:
	case 0xB4:
	case 0xB5:
	case 0xB6:
	case 0xB7:
	case 0xB8:
	case 0xB9:
	case 0xBA:
	case 0xBB:
	case 0xBC:
	case 0xBD:
	case 0xBE:
	case 0xBF:	goto yy129;
	default:	goto yy6;
	}
yy83:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 88 "re2c-scanner-m.re"
	{ return TOKEN_NOT_EQUAL; }
#line 891 "re2c-scanner-m.cc"
yy85:
	++s;
	if (lim <= s) return false;
	yych = *s;
yy86:
	switch (yych) {
	case 0x00:
	case '\n':	goto yy87;
	case '"':	goto yy88;
	case '\\':	goto yy90;
	default:	goto yy85;
	}
yy87:
	s = m;
	switch (yyaccept) {
	case 0: 	goto yy6;
	case 1: 	goto yy40;
	case 2: 	goto yy44;
	case 3: 	goto yy63;
	case 4: 	goto yy109;
	default:	goto yy89;
	}
yy88:
	++s;
yy89:
	re2c_scanner_m_c = yycSTARTEXP;
#line 65 "re2c-scanner-m.re"
	{ return TOKEN_STRING; }
#line 920 "re2c-scanner-m.cc"
yy90:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case 0x00:
	case '\n':	goto yy87;
	case '"':	goto yy139;
	case '\\':	goto yy90;
	default:	goto yy85;
	}
yy92:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 100 "re2c-scanner-m.re"
	{ return TOKEN_DOUBLE_AND; }
#line 937 "re2c-scanner-m.cc"
yy94:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 123 "re2c-scanner-m.re"
	{ return TOKEN_MULT_EQUAL; }
#line 943 "re2c-scanner-m.cc"
yy96:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 119 "re2c-scanner-m.re"
	{ return TOKEN_PLUS_EQUAL; }
#line 949 "re2c-scanner-m.cc"
yy98:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 120 "re2c-scanner-m.re"
	{ return TOKEN_MINUS_EQUAL; }
#line 955 "re2c-scanner-m.cc"
yy100:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 117 "re2c-scanner-m.re"
	{ return TOKEN_DOTAPOS; }
#line 961 "re2c-scanner-m.cc"
yy102:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy140;
	default:	goto yy103;
	}
yy103:
	re2c_scanner_m_c = yycSTARTEXP;
#line 113 "re2c-scanner-m.re"
	{ return TOKEN_DOTMULT; }
#line 972 "re2c-scanner-m.cc"
yy104:
	yych = *++s;
	switch (yych) {
	case '.':	goto yy142;
	default:	goto yy87;
	}
yy105:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy145;
	default:	goto yy106;
	}
yy106:
	re2c_scanner_m_c = yycSTARTEXP;
#line 114 "re2c-scanner-m.re"
	{ return TOKEN_DOTDIV; }
#line 989 "re2c-scanner-m.cc"
yy107:
	yyaccept = 4;
	m = ++s;
	if ((lim - s) < 3) return false;
	yych = *s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy107;
	case 'D':
	case 'E':
	case 'd':
	case 'e':	goto yy117;
	case 'F':
	case 'I':
	case 'L':
	case 'f':
	case 'i':
	case 'l':	goto yy118;
	default:	goto yy109;
	}
yy109:
#line 67 "re2c-scanner-m.re"
	{ return TOKEN_FLOAT; }
#line 1021 "re2c-scanner-m.cc"
yy110:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy147;
	default:	goto yy111;
	}
yy111:
	re2c_scanner_m_c = yycSTARTEXP;
#line 115 "re2c-scanner-m.re"
	{ return TOKEN_DOTBACKSLASH; }
#line 1032 "re2c-scanner-m.cc"
yy112:
	yych = *++s;
	switch (yych) {
	case '=':	goto yy149;
	default:	goto yy113;
	}
yy113:
	re2c_scanner_m_c = yycSTARTEXP;
#line 116 "re2c-scanner-m.re"
	{ return TOKEN_DOTPOW; }
#line 1043 "re2c-scanner-m.cc"
yy114:
	++s;
	re2c_scanner_m_c = yycSTARTEXP;
#line 121 "re2c-scanner-m.re"
	{ return TOKEN_DIV_EQUAL; }
#line 1049 "re2c-scanner-m.cc"
yy116:
	yych = *++s;
	switch (yych) {
	case '*':
	case '.':
	case '/':
	case '\\':
	case '^':	goto yy87;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy107;
	default:	goto yy151;
	}
yy117:
	yych = *++s;
	switch (yych) {
	case '+':
	case '-':	goto yy153;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy154;
	default:	goto yy87;
	}
yy118:
	++s;
	goto yy109;
yy119:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy119;
	default:	goto yy44;
	}
yy121:
	yych = *++s;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy156;
	default:	goto yy87;
	}
